--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/postor/next-persist-state#readme",
   "dependencies": {
-    "next": "^5.0.0",
+    "lodash.isfunction": "^3.0.9",
+    "next": "^9.1.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
