--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "next": "^9.1.6",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-persist-state": "^1.0.2"
   }
 }
