--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-persist-state",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Persisting React state between route navigation for react SPA | 即使 SPA 页面间跳转仍能使组件保持数据",
   "main": "dist/connect.js",
   "scripts": {
@@ -19,16 +19,16 @@
   },
   "homepage": "https://github.com/postor/react-persist-state#readme",
   "dependencies": {
-    "lodash.isfunction": "^3.0.9",
-    "next": "^9.1.6",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "lodash.isfunction": "^3.0.9"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.7",
-    "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
-    "@babel/preset-react": "^7.7.4",
-    "@babel/preset-stage-2": "^7.0.0"
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.11.4",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-stage-2": "^7.8.3",
+    "next": "^9.5.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
